contrib/kubernetes/2023-12-21-cfek8s-backup-sources/server-daemonset.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cfengine
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cfengine-hub
  namespace: cfengine
spec:
  selector:
    matchLabels:
      app: cfengine-hub
  serviceName: "cfengine-hub"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: cfengine-hub
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                  - amd64
      containers:
      - name: hub
        image: localhost:5000/cfengine-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: cfengine-hub-http
        - containerPort: 443
          name: cfengine-hub-https
# TODO: volumeMounts for /var/cfengine/state/pg for data persistency

apiVersion: v1
kind: Service
metadata:
  name: cfengine-hub
spec:
  externalIPs:
    - 192.168.1.239
  ports:
  - name: cfengine-hub-http
    port: 80
  - name: cfengine-hub-https
    port: 443
  selector:
    app: cfengine-hub
