contrib/kubernetes/2023-12-21-cfek8s-backup-sources/server-statefulset.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cfengine
---
apiVersion: v1
kind: Service
metadata:
  name: cfengine-hub
  namespace: cfengine
spec:
  externalIPs:
    - 192.168.1.239
  ports:
  - name: cfengine-hub-http
    port: 80
  - name: cfengine-hub-https
    port: 443
  selector:
    app: cfengine-hub
