contrib/kubernetes/2023-12-21-cfek8s-backup-sources/mender-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mender-ingress
spec:
  tls:
  - hosts:
    - librem15
    secretName: mender-ingress-tls
  rules:
  - host: "librem15"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mender-api-gateway
            port:
              number: 80
