contrib/kubernetes/2023-12-21-cfek8s-backup-sources/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
spec:
  tls:
  - hosts:
    - localhost
    secretName: minio-ingress-tls
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
